tests/rosetta/out/Java/bitmap-midpoint-circle-algorithm.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/bitmap-midpoint-circle-algorithm.mochi:51:27: unexpected token "-1" (expected "]")
  --> /workspace/mochi/tests/rosetta/x/Mochi/bitmap-midpoint-circle-algorithm.mochi:51:27

 51 |   while end > 0 && row[end-1] == " " { end = end - 1 }
    |                           ^

help:
  Parse error occurred. Check syntax near this location.